tests/sksl/errors/ReservedNameFvec3.glsl
### Compilation failed:

error: 1: name 'fvec3' is reserved
int fvec3;
    ^^^^^
1 error
